@@ -7,6 +7,7 @@ Additions:
 	- Add support for "playback_started" callback to generic player.
 	- Implement SPU switch for generic/vlc.
 	- Sync rendering with Ecore_Animator.
+	- Track pending object for proper shutdown.
 
 Fixes:
 	- build out of tree.
